[package]
name = "kayle-engine"
description = "The API for an Open Source Content Moderation Platform"
version = "0.1.0"
edition = "2021"
authors = ["Arsen Shkrumelyak <arsen@shkrumelyak.com>"]
readme = "https://github.com/KayleAI/kayle/blob/main/README.md"
homepage = "https://kayle.ai"
repository = "https://github.com/KayleAI/kayle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.8.0", features = ["rustls-0_23"] }
env_logger = "0.11.5"
dotenv = "0.15.0"
log = "0.4.22"
rustls = "0.23"
rustls-pemfile ="2"
unkey = "0.4"

