[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
sentry = "0.34.0"
sentry-actix = "0.34.0"
dotenvy = "0.15.7"
log = "0.4.22"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.8", features = ["json"] }
unkey = "0.4"