[package]
name = "kayle-rust"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.188"
serde_json = "1.0.116"
worker = "0.1.0"
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.5.0", features = [] }
tokio-postgres = { version="0.7", features=['js'], default-features=false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
